[package]
name = "gundam"
version = "0.1.0"
authors = ["mario incandenza"]

#[lib]
#name = "gundam"
#crate-type = ["cdylib","rlib"]


[[bin]]
name = "gundam"
path = "src/main.rs"

[[bin]]
name = "gundam_kmer"
path = "src/choose.rs"


[dependencies]
bio = "0.25"
rand = "*"
ndarray = "0.12"
jobsteal = "*"
log = "*"
env_logger = "*"
darwin-rs = "*"
fishers_exact = { git = "https://github.com/mario-incandenza/fishers_exact" }
chrono = "*"
lazy_static = "1.0"
num_cpus = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
suffix = "0.3"
